--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
     "angular-sanitize": "~1.3.4",
     "angular-ui-router": "~0.2.13",
     "angular-material": "~0.5.1",
-    "angular": "~1.3.4"
+    "angular": "~1.3.4",
+    "three.js": "*"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.4"
