--- a/bower.json
+++ b/bower.json
@@ -9,8 +9,7 @@
     "angular-ui-router": "~0.2.13",
     "angular-material": "~0.5.1",
     "angular": "~1.3.4",
-    "three.js": "*",
-    "requirejs": "~2.1.15"
+    "three.js": "*"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.4"
