--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
     "angular-ui-router": "~0.2.13",
     "angular-material": "~0.5.1",
     "angular": "~1.3.4",
-    "three.js": "*"
+    "three.js": "*",
+    "threex.keyboardstate": "*"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.4"
