--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "angular-material": "~0.5.1",
     "angular": "~1.3.4",
     "three.js": "*",
-    "threex.keyboardstate": "*"
+    "threex.keyboardstate": "*",
+    "physijs": "*"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.4"
