--- a/bower.json
+++ b/bower.json
@@ -10,8 +10,7 @@
     "angular-material": "~0.5.1",
     "angular": "~1.3.4",
     "three.js": "*",
-    "threex.keyboardstate": "*",
-    "physijs": "*"
+    "threex.keyboardstate": "*"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.4"
